# pima-indians

./: .dockerignore  .gitignore  CONSISTENCY_REPORT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: inference_config.yaml  train_config.yaml
docs/: ARCHITECTURE.md  EDA_GUIDE.md  QUICKSTART.md
models/production/: metadata.json  model_artifacts.pkl
notebooks/: 01_exploratory_data_analysis.py
notebooks/__marimo__/session/: 01_exploratory_data_analysis.py.json
scripts/: deploy.sh
src/: __init__.py
src/config/: __init__.py  constants.py
src/data/: validate_input.py
src/features/: preprocess.py
src/inference/: batch_predict.py
src/models/: evaluate.py  train.py
src/monitoring/: drift_detection.py
tests/: __init__.py  test_preprocessing.py  test_validation.py
